openshift/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: discount-code-verifier-uat
  labels:
    app: discount-code-verifier
    environment: uat
spec:
  selector:
    app: discount-code-verifier
    environment: uat
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
