openshift/route.yaml

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: discount-code-verifier-uat
  labels:
    app: discount-code-verifier
    environment: uat
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: discount-code-verifier-uat
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
