openshift/network-policy.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: discount-code-verifier-network-policy
spec:
  podSelector:
    matchLabels:
      app: discount-code-verifier
      environment: uat
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 8080
  policyTypes:
    - Ingress
